--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -17,14 +17,16 @@
 
 .wd-search-container {
   display: flex;
-  background-color: ;
+  background-color: rgb(32, 35, 39);
   border-radius: 20px;
+  border: none;
 }
 
 .wd-search-container input[type="text"] {
-  border: none;
+  border: transparent;
+  border-radius: 20px;
+  box-sizing: border-box;
   background-color: transparent;
   color: white;
   padding: 14px;
-  width: 80%;
 }
