--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,50 +1,50 @@
-.wd-border-gray{
-    color: #6e767d;
+.wd-border-gray {
+  color: #6e767d;
 }
 
 .wd-img-round {
-    border-radius: 20%;
+  border-radius: 20%;
 }
 
-.wd-more-options-cog{
-    width: 1em;
-    height: 1em;
-    line-height: 1em;
+.wd-more-options-cog {
+  width: 1em;
+  height: 1em;
+  line-height: 1em;
 }
 
-.wd-ellipsis-small{
-    font-size: small;
+.wd-ellipsis-small {
+  font-size: small;
 }
 
 .wd-follow-btn-lite {
-    position: absolute;
-    right: 10px;
-    width: auto;
-    top: 50%;
-    transform: translateY(-50%);
+  position: absolute;
+  right: 10px;
+  width: auto;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.wd-text{
-    position: relative;
-    width: auto;
-    z-index: 2;
+.wd-text {
+  position: relative;
+  width: auto;
+  z-index: 2;
 }
 
 .wd-text-color-gray {
-    color: gray;
+  color: gray;
 }
 
-.wd-top-bottom-10px{
-    bottom: 10px;
-    left: 10px;
+.wd-top-bottom-10px {
+  bottom: 10px;
+  left: 10px;
 }
 
-.nav-link .ac{
-    border-bottom: solid 2px blue !important;
+.nav-link .ac {
+  border-bottom: solid 2px blue !important;
 }
 
 .wd-settings-cog {
-    font-size: 25px;
-    color: #1DA1F2;
-    padding: 1px;
+  font-size: 25px;
+  color: #1da1f2;
+  padding: 1px;
 }
