--- a/public/tuiter/explore/index-challenge.css
+++ b/public/tuiter/explore/index-challenge.css
@@ -1,3 +1,8 @@
+.wd-body {
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+}
+
 .wd-img-round {
   border-radius: 20%;
 }
@@ -119,7 +124,7 @@
 } 
 
 .wd-font-size-18 {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .wd-font-weight-300 {
