--- a/src/tuiter/tuits/index.css
+++ b/src/tuiter/tuits/index.css
@@ -1,15 +1,3 @@
-.wd-A__title {
-  margin: auto;
-  color: black;
-  font-size: 20px;
-}
-
-.wd-A__handle {
-  margin: auto;
-  color: lightgray;
-  font-size: 13px;
-}
-
 .wd-tuit-container {
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
@@ -19,7 +7,7 @@
   border-top-right-radius: 10px;
 }
 
-.wd-tuit-content-container {
+.wd-tuit-tuit-container {
   padding-left: 16px;
   padding-top: 12px;
   display: flex;
@@ -27,13 +15,13 @@
   align-items: stretch;
 }
 
-.wd-B__profile-img {
+.wd-tuit-profile-image {
   border-radius: 48px;
   height: 48px;
   width: 48px;
 }
 
-.wd-mid-segment-container {
+.wd-tuit-tuit-content-container {
   display: flex;
   flex-direction: column;
   padding-left: 12px;
@@ -41,41 +29,33 @@
   margin-bottom: 12px;
 }
 
-.wd-C_container {
+.wd-tuit-tuit-topbar-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.wd-C__profile-info {
+.wd-tuit-username-container {
   width: 88%;
 }
 
-.wd-C__profile-info > h4,
+.wd-tuit-username-container > h4,
 h3 {
   display: inline;
 }
 
-.wd-C__profile-name {
+.wd-tuit-user-username {
   color: black;
   font-weight: bold;
   font-size: 15px;
 }
 
-.wd-C__handle-name {
+.wd-tuit-user-tuiter-handle {
   color: rgb(89, 101, 114);
   font-size: 15px;
 }
 
-.wd-C__post-date {
-  color: rgb(89, 101, 114);
-}
-
-.wd-C__options {
-  width: 10.8%;
-}
-
-.wd-D__text {
+.wd-tuiter-tuit-tuit-content {
   text-align: justify;
   text-justify: inter-word;
   margin: 0px;
@@ -84,32 +64,7 @@ h3 {
   padding-bottom: 12px;
 }
 
-.wd-E-F__container {
-  border: 1px solid rgb(47, 51, 54);
-  /* border-radius: 10px; */
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  width: 100%;
-}
-
-.wd-E__image > img {
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-
-.wd-F__title {
-  margin: auto;
-  padding: 12px;
-  font-size: 15px;
-}
-
-.wd-F__text {
-  padding: 0px 12px 12px 12px;
-  margin: auto;
-  color: rgb(47, 51, 54);
-}
-
-.wd-G_container {
+.wd-tuiter-tuit-stats-container {
   padding-top: 12px;
   padding-bottom: 12px;
   display: flex;
@@ -117,15 +72,12 @@ h3 {
   justify-content: space-evenly;
 }
 
-.wd-post-info {
-  margin: auto;
-}
 
 a:link {
   text-decoration: none;
 }
 
-.wd-icons {
+.wd-tuiter-tuit-icon {
   color: rgb(89, 101, 114);
 }
 
@@ -134,7 +86,7 @@ a:link {
   display: inline;
 }
 
-.wd-post-info {
+.wd-tuiter-tuit-icon-container {
   display: flex;
   flex-direction: row;
 }
@@ -143,16 +95,7 @@ a:link {
   color: rgb(89, 101, 114);
 }
 
-.red {
-  color: red;
-}
-
-.wd-sky-blue {
-  padding-left: 8px;
-  color: deepskyblue;
-}
-
-.wd-tuit-delete {
+.wd-tuit-delete-tuit {
   background-color: white;
   border: none;
 }
