--- a/src/tuiter/tuits/index.css
+++ b/src/tuiter/tuits/index.css
@@ -1,108 +1,162 @@
+.wd-A__title {
+    margin: auto;
+    color: black;
+    font-size: 20px;
+}
+
+.wd-A__handle {
+    margin: auto;
+    color: lightgray;
+    font-size: 13px;
+}
+
 .wd-tuit-container {
-  border: 1px solid rgba(0, 0, 0, 0.125);
+    border: 1px solid rgba(0, 0, 0, 0.125);
+
 }
 
 .wd-tuit-container:first-child {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.wd-tuit-tuit-container {
-  padding-left: 16px;
-  padding-top: 12px;
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
+.wd-tuit-content-container {
+    padding-left: 16px;
+    padding-top: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
 }
 
-.wd-tuit-profile-image {
-  border-radius: 48px;
-  height: 48px;
-  width: 48px;
+.wd-B__profile-img {
+    border-radius: 48px;
+    height: 48px;
+    width: 48px;
 }
 
-.wd-tuit-tuit-content-container {
-  display: flex;
-  flex-direction: column;
-  padding-left: 12px;
-  width: 90%;
+.wd-mid-segment-container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 12px;
+    width: 90%;
+    margin-bottom: 12px;
 }
 
-.wd-tuit-tuit-topbar-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.wd-C_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.wd-tuit-username-container {
-  width: 88%;
+.wd-C__profile-info {
+    width: 88%;
 }
 
-.wd-tuit-username-container > h4,
+.wd-C__profile-info>h4,
 h3 {
-  display: inline;
+    display: inline;
 }
 
-.wd-tuit-user-username {
-  color: black;
-  font-weight: bold;
-  font-size: 15px;
+.wd-C__profile-name {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
 }
 
-.wd-tuit-user-tuiter-handle {
-  color: rgb(89, 101, 114);
-  font-size: 15px;
+.wd-C__handle-name {
+    color: rgb(89, 101, 114);
+    font-size: 15px;
 }
 
-.wd-tuiter-tuit-tuit-content {
-  text-align: justify;
-  text-justify: inter-word;
-  margin: 0px;
-  max-width: 506px;
-  padding-right: 16px;
+.wd-C__post-date {
+    color: rgb(89, 101, 114);
 }
 
-.wd-tuiter-tuit-stats-container {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+.wd-C__options {
+    width: 10.8%;
 }
 
+.wd-D__text {
+    text-align: justify;
+    text-justify: inter-word;
+    margin: 0px;
+    max-width: 506px;
+    padding-right: 16px;
+    padding-bottom: 12px;
+}
+
+.wd-E-F__container {
+    border: 1px solid rgb(47, 51, 54);
+    /* border-radius: 10px; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 100%;
+
+}
+
+.wd-E__image>img {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+
+.wd-F__title {
+    margin: auto;
+    padding: 12px;
+    font-size: 15px;
+
+}
+
+.wd-F__text {
+    padding: 0px 12px 12px 12px;
+    margin: auto;
+    color: rgb(47, 51, 54);
+}
+
+.wd-G_container {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.wd-post-info {
+    margin: auto;
+}
 
 a:link {
-  text-decoration: none;
+    text-decoration: none;
 }
 
-.wd-tuiter-tuit-icon {
-  color: rgb(89, 101, 114);
+.wd-icons {
+    color: rgb(89, 101, 114);
 }
 
 .wd-numbers {
-  padding-left: 12px;
-  display: inline;
+    padding-left: 12px;
+    display: inline;
 }
 
-.wd-tuiter-tuit-icon-container {
-  display: flex;
-  flex-direction: row;
+.wd-post-info {
+    display: flex;
+    flex-direction: row;
 }
 
 .wd-link {
-  color: rgb(89, 101, 114);
+    color: rgb(89, 101, 114);
 }
 
-.wd-tuit-delete-tuit {
-  background-color: white;
-  border: none;
+.red {
+    color: red;
 }
 
-.wd-tuiter-blue {
-  color: rgb(29, 161, 242);
+.wd-sky-blue {
+    padding-left: 8px;
+    color: deepskyblue;
 }
 
-.wd-padding-left-right-8px {
-  padding-left: 8px;
-  padding-right: 8px;
+.wd-tuit-delete {
+    background-color: white;
+    border: none;
 }
