--- a/src/tuiter/tuits/index.css
+++ b/src/tuiter/tuits/index.css
@@ -101,6 +101,10 @@ a:link {
   color: rgb(29, 161, 242);
 }
 
+.wd-red {
+  color: rgb(255, 0, 0);
+}
+
 .wd-padding-left-right-8px {
   padding-left: 8px;
   padding-right: 8px;
